--- a/test-piedras/css/index.css
+++ b/test-piedras/css/index.css
@@ -6,6 +6,10 @@ body {
     align-items: center;
     margin: 0;
     background-color: #81e2e6;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    font-family: 'Roboto', sans-serif;
 }
 
 
